--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -26,7 +26,8 @@
     "contracts": "workspace:*",
     "ethers": "^5.7.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "web3.storage": "^4.5.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.6",
